--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -154,20 +154,26 @@
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="CarNPC.cpp" />
     <ClCompile Include="CarPlayer.cpp" />
+    <ClCompile Include="Collider.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Pedestrian.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Rigidbody.cpp" />
     <ClCompile Include="Roaduser.cpp" />
+    <ClCompile Include="Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Car.h" />
     <ClInclude Include="CarNPC.h" />
     <ClInclude Include="CarPlayer.h" />
+    <ClInclude Include="Collider.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Pedestrian.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Rigidbody.h" />
     <ClInclude Include="Roaduser.h" />
+    <ClInclude Include="Vector2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
